setup/deployment/service-carport-pvm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carport-server-deployment
spec:
  selector:
    matchLabels:
      app: carport-api-server
  template:
    metadata:
      labels:
        app: carport-api-server
    spec:
      volumes:
      - name: rpi-gd-volume
        persistentVolumeClaim:
          claimName: rpi-gd-pvc
      containers:
      - name: carport-api-server
        image: iotccrscotts.azurecr.io/carport-service:3.0.10-arm64v8
        ports:
        - containerPort: 9092
        volumeMounts:
        - name: rpi-gd-volume
          mountPath: /rpi-gd/data
        securityContext:
          privileged: true
      imagePullSecrets:
      - name: rpi-gd-acr-access
---
apiVersion: v1
kind: Service
metadata:
  name: carport-server-service
spec:
  type: LoadBalancer
  selector:
    app: carport-api-server
  ports:
  - name: carport-api-server
    protocol: TCP
    port: 9092
    targetPort: 9092
