setup/deployment/service-carport-spa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carport-server-deployment
spec:
  selector:
    matchLabels:
      app: carport-api-server
  template:
    metadata:
      labels:
        app: carport-api-server
    spec:
      volumes:
      - name: rpi-gd-volume
        persistentVolumeClaim:
          claimName: rpi-gd-pvc
      containers:
      - name: carport-api-server
        image: iotccrscotts.azurecr.io/carport-service:3.2.5-arm64v8
        ports:
        - containerPort: 9092
        volumeMounts:
        - name: rpi-gd-volume
          mountPath: /rpi-gd/data
        securityContext:
          privileged: true
      imagePullSecrets:
      - name: rpi-gd-acr-access
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: carport-server-service
spec:
  selector:
    app: carport-api-server
  ports:
  - name: carport-api-server
    protocol: TCP
    port: 9092
    targetPort: 9092
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: carport-client-deployment
# spec:
#   selector:
#     matchLabels:
#       app: carport-client
#   template:
#     metadata:
#       labels:
#         app: carport-client
#     spec:
#       containers:
#       - name: carport-client
#         image: iotccrscotts.azurecr.io/carport-plc-client:3.2.0-arm64v8
#         ports:
#         - containerPort: 80
#       imagePullSecrets:
#       - name: rpi-gd-acr-access
#       restartPolicy: Always
# ---
apiVersion: v1
kind: Service
metadata:
  name: carport-client-service
spec:
  type: NodePort
  selector:
    app: carport-client
  ports:
  - name: carport-client
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31000
