setup/deployment/ingress-carport.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api/v1/control/
        backend:
          service:
            name: carport-server-service
            port:
              number: 9092
